Use package imports in testing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,5 +55,5 @@ docstring-code-format = false
 [tool.pytest.ini_options]
 minversion = "6.0"
 filterwarnings = ["error"]
-pythonpath = "typstwriter"
+pythonpath = "."
 testpaths = "tests"
