--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ line-length = 128
 indent-width = 4
 
 [tool.ruff.lint]
-select = ["E", "F", "W", "N", "D", "Q", "PTH", "PL", "R", "C", "B", "C4", "G", "PT", "RET", "RUF", "SIM", "UP"]
+select = ["E", "F", "W", "N", "D", "Q", "PL", "R", "C", "B", "C4", "G", "PT", "RET", "RUF", "SIM", "UP"]
 ignore = ["D212", "D203", "D400", "RET505", "D100", "PLR0915", "RET504", "PLE1205", "UP015"]
 
 [tool.ruff.format]
