Extend pytest config.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,11 @@ docstring-code-format = false
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-filterwarnings = ["error"]
 pythonpath = "."
 testpaths = "tests"
+log_cli_level = "INFO"
+xfail_strict = true
+addopts = ["-r all", "--strict-config", "--strict-markers"]
+filterwarnings = ["error",
+                  "ignore:Failed to disconnect .* from signal:RuntimeWarning",
+                  "ignore:GObject.GError is deprecated; use GLib.GError instead"]
