--- a/docs/example_config.ini
+++ b/docs/example_config.ini
@@ -1,6 +1,9 @@
 [General]
 #The standard working directory.
 working_directory = ~/Documents/typst_projects/
+#The default application layout.
+#It can be typewriter (editor under preview), editor_right (editor right of preview) or editor_left (editor left of preview).
+default_layout = typewriter
 
 [Compiler]
 #The name of the typst compiler on your system (in almost all cases simply typst).
