Add tests for pdf_viewer.py.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dynamic = ["version"]
 [project.optional-dependencies]
 tests = [
   "pytest",
-  "pytest-qt"
+  "pytest-qt",
+  "fpdf"
 ]
 
 [project.urls]
