Improve example_config.ini

--- a/docs/example_config.ini
+++ b/docs/example_config.ini
@@ -10,9 +10,9 @@ default_layout = typewriter
 
 [Compiler]
 # The name of the typst compiler on your system (in almost all cases simply typst)
-# You can also provide an absolute path to the typst executable, e.g.:
-# name = /home/username/Code/typst/target/release/typst
 name = typst
+# Alternatively one can provide an absolute path to the typst executable, e.g.:
+# name = /home/username/Code/typst/target/release/typst
 # The compiler mode (live/on_demand)
 mode = live
 
