Make editor font size changeable.

--- a/docs/example_config.ini
+++ b/docs/example_config.ini
@@ -17,6 +17,8 @@ name = typst
 mode = live
 
 [Editor]
+# Set the font size
+font_size = 12
 # Save all open tabs before compiling
 save_at_run = True
 # The code highlighter style to use. See https://pygments.org/styles/ for available options
