Internalize syntax highlighting.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,9 @@ classifiers = [
 ]
 dependencies = [
 "qtpy >= 2.3",
+"pyside6 >= 6.4.0",
 "pygments >= 2.18",
-"superqt >= 0.3.3",
-"send2trash >= 1.8.0",
-"pyside6 >= 6.4.0"
+"send2trash >= 1.8.0"
 ]
 dynamic = ["version"]
 
