Add config options to select the docks visible at startup.

--- a/docs/example_config.ini
+++ b/docs/example_config.ini
@@ -4,10 +4,6 @@ working_directory = ~/Documents/typst_projects/
 # Use . to start from the current directory the program was started from
 # working_directory = .
 
-# The default application layout
-# It can be typewriter (editor under preview), editor_right (editor right of preview) or editor_left (editor left of preview)
-default_layout = typewriter
-
 [Compiler]
 # The name of the typst compiler on your system (in almost all cases simply typst)
 name = typst
@@ -31,6 +27,17 @@ show_line_numbers = True
 highlight_line = True
 # Use spaces instead of tabs
 use_spaces = True
+
+[Layout]
+# The default application layout
+# It can be typewriter (editor under preview), editor_right (editor right of preview) or editor_left (editor left of preview)
+default_layout = typewriter
+# Show the filesystem explorer at startup
+show_fs_explorer = True
+# Show the filesystem explorer at startup
+show_compiler_options = True
+# Show the filesystem explorer at startup
+show_compiler_output = True
 
 [Internals]
 # The path where the list of recent files will be saved
