Add option to resume last session.

--- a/docs/example_config.ini
+++ b/docs/example_config.ini
@@ -1,8 +1,10 @@
 [General]
 # Configure the working directory on startup
-working_directory = ~/Documents/typst_projects/
 # Use . to start from the current directory the program was started from
+working_directory = ~/Documents/typst_projects/
 # working_directory = .
+#resume last session on startup
+resume_last_session = True
 
 [Compiler]
 # The name of the typst compiler on your system (in almost all cases simply typst)
