--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ permissions:
 jobs:
   pytest:
     name: pytest
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12", "3.13"]
@@ -19,7 +19,7 @@ jobs:
     - name: Install system packages
       run: |
         sudo apt update
-        sudo apt install libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0 x11-utils libgl1 libegl1 libdbus-1-3 libegl1-mesa libxcb-cursor0
+        sudo apt install libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0 x11-utils libgl1 libegl1 libdbus-1-3 libxcb-cursor0 libgtk-3-0
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
@@ -28,7 +28,7 @@ jobs:
     - name: Print Python version
       run: python -c "import sys; print(sys.version)"
     - name: Install pip
-      run: | 
+      run: |
         python -m pip install --upgrade pip
     - name: Install typstwriter
       run: |
@@ -37,9 +37,14 @@ jobs:
     - name: Start X
       run: |
         /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
+    - name: Create trash directory
+      run: |
+        sudo mkdir -m 777 /tmp_pytest
     - name: Run tests
       run: |
         pytest
+      env:
+        PYTEST_DEBUG_TEMPROOT: /tmp_pytest
         
   ruff:
     name: Ruff
