Add theme support.

--- a/docs/example_config.ini
+++ b/docs/example_config.ini
@@ -5,6 +5,9 @@ working_directory = ~/Documents/typst_projects/
 # working_directory = .
 # Resume last session on startup
 resume_last_session = True
+# The default application theme
+# It can be default, one_dark_two, catppuccin_macchiato, modern_light, github_light, blender, dracula, nord, catppuccin_latte, catppuccin_mocha, catppuccin_frappe, modern_dark, github_dark, monokai, atom_one
+theme = default
 
 [Compiler]
 # The name of the Typst compiler on your system (in almost all cases simply typst)
